rosa/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-autos
  labels:
    app: simple-autos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-autos
  template:
    metadata:
      labels:
        app: simple-autos
    spec:
      imagePullSecrets:
        - name: argocd-access-token
      containers:
        - name: simple-autos
          image: registry.gitlab.galvanize.com/cohorts/ent/sf/cse-rosa/cse-rosa-2024-01-27/student-work/matthew-clark/simple-autos-rosa:cse-matthew-clark
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
